src/objects/Rewards_Programme_period__c.object
<CustomObject>
    <description>This is the period considers for Displaying Leader board and All leaders.</description>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>This indicates Created Date of Rewards Programme period</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This indicates End Date of Rewards Programme Period</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This Indicates Start Date Of Rewards Programme Period.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Rewards Programme Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Programme Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>